# vicarious-rb-motion

./: .gitignore  .gitmodules  CMakeLists.txt  vicariousBuild.sh
include/: Vicarious.h  VicariousRobot.h  VicariousUtils.h
lib/: CMakeLists.txt
src/: Vicarious.cpp  VicariousRobot.cpp  VicariousUtils.cpp  vicariousURDF.h
test/: CMakeLists.txt  robotTraj.cpp
wasm/: CMakeLists.txt  moduleVicarious.cpp
